Add react-coast for real

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "helmet": "*",
     "react": "*",
     "node-sass-middleware": "*",
-    "forever": "*"
+    "forever": "*",
+    "react-coast": "git://github.com/stockwatcher/react-coast.git#master"
   }
 }
