--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "express-session": "*",
     "habitat": "*",
     "helmet": "*",
-    "node-sass-middleware": "*",
+    "mustache-express": "*",
     "forever": "*",
+    "react": "15.x",
+    "react-dom": "15.x",
+    "babel-standalone": "6.x",
+    "jquery": "3.x",
     "react-coast": "git://github.com/stockwatcher/react-coast.git#master"
   }
 }
