--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "description": "A basic template project that can be used for any web application.",
   "version": "0.1.0",
   "private": false,
+  "scripts": {
+    "start": "./runserver.sh",
+    "dev": "./runserver.sh dev"
+  },
   "dependencies": {
     "express": "4.x",
     "basic-auth": "1.x",
@@ -15,6 +19,8 @@
     "helmet": "*",
     "mustache-express": "*",
     "forever": "*",
+    "watchify": "*",
+    "ramda": "*",
     "react": "15.x",
     "react-dom": "15.x",
     "babel-standalone": "6.x",
