--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": false,
   "scripts": {
     "start": "./runserver.sh",
-    "dev": "./runserver.sh dev"
+    "dev": "./runserver.sh dev",
+    "clean": "./runserver.sh clean"
   },
   "dependencies": {
     "express": "4.x",
@@ -19,12 +20,15 @@
     "helmet": "*",
     "mustache-express": "*",
     "forever": "*",
-    "watchify": "*",
-    "ramda": "*",
     "react": "15.x",
     "react-dom": "15.x",
-    "babel-standalone": "6.x",
     "jquery": "3.x",
     "react-coast": "git://github.com/stockwatcher/react-coast.git#master"
+  },
+  "devDependencies": {
+    "watchify": "*",
+    "babelify": "*",
+    "babel-preset-es2015": "*",
+    "babel-preset-react": "*"
   }
 }
