--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "react-coast": "git://github.com/stockwatcher/react-coast.git#master"
   },
   "devDependencies": {
-    "watchify": "*",
-    "babelify": "*",
-    "babel-preset-es2015": "*",
-    "babel-preset-react": "*"
+    "watchify": "3.x",
+    "babelify": "7.x",
+    "babel-preset-es2015": "6.x",
+    "babel-preset-react": "6.x"
   }
 }
